# rust-clippy

./: Cargo.toml  README.md
src/: common.rs  decode.rs  delete.rs  error.rs  lib.rs  list.rs  main.rs  store.rs
